--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,6 +30,7 @@
 .row-btn {
   display: flex;
   justify-content: center;
+  margin: 10px;
 }
 
 .btn-left {
@@ -48,7 +49,8 @@
 }
 
 .custom-list-group {
-  height: 100vh;
+  // Minus a pixel to avoid scrollbar
+  height: calc(100vh - 1px);
   overflow-y: scroll;
   padding: 10px;
 }
